--- a/index.html
+++ b/index.html
@@ -2,53 +2,177 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=p">
-    <title>Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aadhya-Portfolio</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="style.css">
 </head>
+
+
+<script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+</script>
+
 <body>
+    <nav>
+        <div class="container">
+            <div class="logo">MyPortfolio</div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
 
-    <div class = "navigation">
-        <a class = "active" href ="#home">Home</a>
-        <a href = "#About me"> About Me</a>
-        <a href = "#Projects"> Projects</a>
-        <a href = "#Contact"> Contact</a>
-    </div>
+    <section id="home" class="hero">
+        <div class="hero-content">
+            <h1>Hi, I'm Aadhya Guragain</h1>
+            <p class="subtitle">Computer Science Student</p>
+            <p class="description">
+                Passionate about coding, problem-solving, and building projects that make a difference. 
+                Currently learning and growing in AI, machine learning, and data-driven development.
+            </p>
+            <a href="#contact" class="btn">Get In Touch</a>
+        </div>
+    </section>
+
+    <section id="about">
+        <div class="container">
+            <h2 class="section-title">About Me</h2>
+            <div class="about-content">
+                <div class="about-image">
+                    <img src="unnamed.jpg" alt="My Photo">
+                </div>
+                <div class="about-text">
+                    <h3>Hii! Nice to meet you.</h3>
+                    <p>I'm a Computer Science student at Biratnagar International College  with a passion for technology and innovation.</p>
+                    <p>I enjoy exploring programming languages, frameworks, and building real-world projects.</p>
+                    <p>When I'm not coding, I read tech blogs, try to learn new things, and collaborate on projects.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="skills" class="skills-section">
+        <div class="container">
+            <h2 class="section-title">Skills & Technologies</h2>
+        </div>
+
+        <div class="logo-slider">
+            <div class="logo-track">
+                <div class="logo-item"><div class="logo-icon">🌐</div><span>HTML</span></div>
+                <div class="logo-item"><div class="logo-icon">🎨</div><span>CSS</span></div>
+                <div class="logo-item"><div class="logo-icon">⚡</div><span>JavaScript</span></div>
+                <div class="logo-item"><div class="logo-icon">🐍</div><span>Python</span></div>
+                <div class="logo-item"><div class="logo-icon">🗄️</div><span>MySQL</span></div>
+                <div class="logo-item"><div class="logo-icon">⚛️</div><span>React</span></div>
+                <div class="logo-item"><div class="logo-icon">📦</div><span>Node.js</span></div>
+                <div class="logo-item"><div class="logo-icon">🔧</div><span>Git</span></div>
+
+                <!-- duplicate for loop effect -->
+                <div class="logo-item"><div class="logo-icon">🌐</div><span>HTML</span></div>
+                <div class="logo-item"><div class="logo-icon">🎨</div><span>CSS</span></div>
+                <div class="logo-item"><div class="logo-icon">⚡</div><span>JavaScript</span></div>
+                <div class="logo-item"><div class="logo-icon">🐍</div><span>Python</span></div>
+                <div class="logo-item"><div class="logo-icon">🗄️</div><span>MySQL</span></div>
+                <div class="logo-item"><div class="logo-icon">⚛️</div><span>React</span></div>
+                <div class="logo-item"><div class="logo-icon">📦</div><span>Node.js</span></div>
+                <div class="logo-item"><div class="logo-icon">🔧</div><span>Git</span></div>
+            </div>
+        </div>
+    </section>
+
+    <section id="projects">
+        <div class="container">
+            <h2 class="section-title">My Projects</h2>
+            <div class="projects-grid">
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="Capture.PNG" alt="My Photo">
+                    </div>
+                    <div class="project-content">
+                        <h3>Pomo-Tomato</h3>
+                        <p>A simple and cutesy pomodoro study timer web application which allows user to add tasks as well :)</p>
+                        <div class="project-tags">
+                            <span class="tag">HTML</span><span class="tag">CSS</span><span class="tag">JavaScript</span>
+                             <a href="https://aadhya-rgb.github.io/Pomodoro/" class="tag demo-btn" target="_blank">Demo</a>
 
 
-    <header>
-    <h1>Aadhya Guragain</h1>
-    <p>Smth|Anything|Yayy|</p>
-    </header>
 
-    
+                        </div>
 
-    <h2>About Me!</h2>
-    <p>I'm a student at Biratnagar International College currently
-         pursuing the course of Bsc Hons in Comp-Sci, currently in 
-         second year :)
-    </p>
+                    </div>
+                </div>
 
-    <h2>Projects</h2>
-    <div class = "Project1">
-        <h3>Pomodoro Timer</h3>
-        <p>Study-timer using the 25/5 Pomodoro technique!</p>
-        <a href = "https://aadhya-rgb.github.io/Pomodoro/">Demo :)</a>
-    </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="96bd4de0f60bdf39ec7a3a420f10070c.jpg" alt="My Photo">
 
-    <div class = "Project2">
-        <h3> Dummy Project </h3>
-        <p>Some random project that I made yay!</p>
-        <a href = "">Github-Repo</a>
-    </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>Python Game</h3>
+                        <p>A fun interactive game built using Python and Pygame.</p>
+                        <div class="project-tags">
+                            <span class="tag">Python</span><span class="tag">Pygame</span>
+                        </div>
+                    </div>
+                </div>
 
-    <div class = "Project3">
-        <h3> Dummy Project 2</h3>
-        <p> Dummy project uyayayayayayayay!!</p>
-        <a href = "">Github-Repo</a>
-    </div>
+                <div class="project-card">
+                    <div class="project-image">
+                          <img src="8eed548670f115f05ee16f55e6ca5e97.jpg" alt="My Photo">
 
-    <h2>Contact-Info</h2>
-    
+                    </div>
+                    <div class="project-content">
+                        <h3>Library Management System</h3>
+                        <p>A MySQL-powered app to manage books and members.</p>
+                        <div class="project-tags">
+                            <span class="tag">Python</span><span class="tag">MySQL</span><span class="tag">Flask</span>
+                        </div>
+                    </div>
+                </div>
 
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="contact-section">
+        <div class="container">
+            <h2 class="section-title">Get In Touch</h2>
+
+            <div class="contact-content">
+                <form class="contact-form" action="mailto:your.email@example.com" method="post">
+                    <div class="form-group"><label>Name</label><input type="text" required></div>
+                    <div class="form-group"><label>Email</label><input type="email" required></div>
+                    <div class="form-group"><label>Subject</label><input type="text" required></div>
+                    <div class="form-group"><label>Message</label><textarea required></textarea></div>
+                    <button class="submit-btn">Send Message</button>
+                </form>
+
+                <div class="contact-info">
+                    <p>📧aadhyaguragain@gmail.com</p>
+                    <p>📍 Biratnagar, Nepal</p>
+                    <div class="social-links">
+                        <a href="https://github.com/aadhya-rgb">GH</a><a href="https://np.linkedin.com/in/aadhya-guragain-972592372">IN</a><a href="https://www.instagram.com/__aadhyaaaa.__?igsh=NHhoa21za2VoYWIw">IG</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+ <footer>
+    © <span id="year"></span> Aadhya Guragain. All rights reserved.
+</footer>
+
+<script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
